# obsw

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists Lynx.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  hardcopy.0  justfile  q  sbs  sbs.bat  sbs.conf  screenlog.0
bin_delivery/13_05_2019/: README.md
bin_delivery/15_05_2019/: README.md
bin_delivery/hermes/14_05_2019/: README.md
bin_delivery/hermesv1/flight/: flash.sh
bin_delivery/hermesv1/ramtest/: flash.sh
cmake/: dependencies Pyxis.cmake  dependencies.cmake  mapgen.cmake
data/ParafoilTestDev/: UMLMavlink.dia  UMLWingControlDiagram.dia
data/airbrakes/: coeffs_euroc.mat  coeffs_roccaraso.mat  trajectories_euroc.h  trajectories_euroc.mat  trajectories_roccaraso.h  trajectories_roccaraso.mat
doc/: Doxyfile
ide/vscode/: c_cpp_properties.json  launch.json  tasks.json
scripts/: eventgen.sh  flash-calibration-entry.sh  flash-entry-hil.sh  flash-entry.sh  flash-ramtest.sh  flash-testsuite.sh  flashentry.sh  flashram.sh  linter.sh  scxml2plant.sh  vscodesetup.sh
scripts/EventDumper/: .gitignore  Makefile
scripts/airbrakes/: coeffs.py  trajectories.py
scripts/event_header_generator/: EventFunctions.cpp.template  EventStrings.cpp.template  Events.h.template  Topics.h.template  event_generator.py  requirements.txt
scripts/logdecoder/: Makefile  logdecoder  logdecoder.cpp
scripts/logdecoder/AutomatedAntennas/: logdecoder.cpp
scripts/logdecoder/Engine/: Makefile
scripts/logdecoder/General/: Makefile  logdecoder  logdecoder.cpp
scripts/logdecoder/Main/: logdecoder.cpp
scripts/logdecoder/MockupMain/: logdecoder.cpp
scripts/logdecoder/Motor/: logdecoder.cpp
scripts/logdecoder/Parafoil/: logdecoder  logdecoder.cpp
scripts/logdecoder/Payload/: Makefile  logdecoder
scripts/logdecoder/RIGv2/: logdecoder.cpp
src Lynx/boards/DeathStack/: DeathStack.h  DeathStackStatus.h
src Lynx/boards/common/: ServoInterface.h
src Lynx/entrypoints/: death-stack-x-entry.cpp  lynx-mock-telemetry.cpp  payload-entry.cpp  windtunnel-entry.cpp
src Lynx/entrypoints/death-stack-x-decoder/: Makefile  death-stack-x-decoder.cpp
src Lynx/entrypoints/deserializer/: logdecoder.cpp
src Lynx/entrypoints/hardware_in_the_loop/: hil-entry.cpp
src Lynx/entrypoints/windtunnel-test-decoder/: windtunnel-decoder.cpp
src Lynx/hardware_in_the_loop/: HIL.h  HILFlightPhasesManager.h
src Lynx/hardware_in_the_loop/HIL_algorithms/: HILMockAerobrakeAlgorithm.h
src Lynx/hardware_in_the_loop/HIL_sensors/: HILBarometer.h  HILGps.h  HILSensor.h  HILSensorsData.h
src Lynx/hardware_in_the_loop/simulator_communication/: HILTransceiver.h
src Lynx/mocksensors/: MockGPS.h  MockIMU.h  MockPressureSensor.h  MockSensors.h  MockSensorsData.h  MockSpeedSensor.h
src Lynx/mocksensors/lynx_flight_data/: lynx_airspeed_data.cpp  lynx_pressure_static_data.h
src Lynx/tests/: ledwave.cpp  test-ada-dpl-simulation.cpp  test-kalman-hitl.cpp  test-pinhandler.cpp  test-sensormanager.cpp
src Lynx/tests/airbrakes/: test-airbrakes-algorithm.cpp
src Lynx/tests/deathstack-boards/: test-analog-board.cpp
src Lynx/tests/deployment/: test-deployment-interactive.cpp
src Lynx/tests/drivers/: test-cutter.cpp  test-motor.cpp  test-pressure-calib.cpp  test-servo.cpp
src Lynx/tests/mock_sensors/: test-mock-data.h
src Lynx/tests/ram_test/: README.md
src Pyxis/boards/Ciuti/: BoardScheduler.h  Buses.h
src Pyxis/boards/Parafoil/: BoardScheduler.h  Buses.h
src Pyxis/boards/common/: LedConfig.h  SX1278Config.h
src Pyxis/entrypoints/Auxiliary/: auxiliary-entry.cpp
src Pyxis/entrypoints/Ciuti/: ciuti-entry.cpp
src Pyxis/scripts/: fsmgen.sh
src/Biliquid/: Debug.h  biliquid-valve-slave.cpp  hwmapping.h
src/ConRIG/: BoardScheduler.h  Buses.h
src/ConRIGv2/: BoardScheduler.h  BoardStatus.cpp  BoardStatus.h  Buses.h  conrig-v2-entry.cpp
src/Engine/: BoardScheduler.h  Buses.h  engine-entry.cpp
src/Main/: BoardScheduler.h  Buses.h  GpioExpander.h  main-airbrakes-demo.cpp  main-demo.cpp  main-entry.cpp
src/MockupMain/: BoardScheduler.h  Buses.h  mockup-entry.cpp
src/Motor/: BoardScheduler.h  Buses.h  motor-entry.cpp
src/Parafoil/: BoardScheduler.h  Buses.h  parafoil-entry.cpp  parafoil-manual-servo-test.cpp  test-parafoil-data.h
src/Payload/: BoardScheduler.h  Buses.h  payload-entry.cpp
src/Pitot/: BoardScheduler.h  Buses.h  pitot-entry.cpp
src/RIGv2/: BoardScheduler.h  Buses.h  rig-v2-adc-test.cpp  rig-v2-biliquid-test.cpp  rig-v2-entry.cpp
src/RIGv3/: BoardScheduler.h  Buses.h  rig-v3-adc-test.cpp  rig-v3-entry.cpp
src/boards/: CanInterfaces.h
src/boards/Main/StateMachines/ADAController/run_ADA/ADA/run_ADA_grt_rtw/: CMakeLists.txt  buildInfo.mat  multiword_types.h  rtmodel.h  rtwtypes.h  run_ADA.cpp  run_ADA.h  run_ADA_data.cpp  run_ADA_private.h  run_ADA_types.h
src/common/: CanConfig.h  CanInterfaces.h  Events.h  Mavlink.h  MavlinkGemini.h  MavlinkHydra.h  MavlinkLyra.h  MavlinkOrion.h  MeanFilter.h  MedianFilter.h  Radio.h  ReferenceConfig.h  SystemData.h  Topics.h  UnlimitedAngle.h
src/entrypoints/: adctest.cpp  calibration-entry.cpp  death-stack-entry-x.cpp  death-stack-entry.cpp  death-stack-testsuite.cpp  death-stack-x-entry.cpp  death-stack-x-testsuite.cpp  log-pressure.cpp  lynx-mock-telemetry.cpp  parafoilTest-entry.cpp  payload-entry.cpp  r2a-cutter.cpp  windtunnel-entry.cpp
src/hardware_in_the_loop/: HIL.h  HILConfig.h  HILFlightPhasesManager.h  README.md
src/mocksensors/: MockGPS.h  MockIMU.h  MockPressureSensor.h  MockSensors.h  MockSensorsData.h  MockSpeedSensor.h
src/tests/: eigen-test.cpp  ledwave.cpp  test-ada-dpl-simulation.cpp  test-canproxy.cpp  test-correction-bmx160.cpp  test-correction-params.cpp  test-death-stack-x.cpp  test-deathstackx.cpp  test-dpl.cpp  test-fmm-interactive.cpp  test-fmm.cpp  test-hse.cpp  test-kalman-hitl.cpp  test-logproxy.cpp  test-pinhandler.cpp  test-sensormanager-integrated.cpp  test-sensormanager.cpp  test-sm+tmtc.cpp  test-tmtc.cpp
src/tests Lynx/: test-ada-dpl-simulation.cpp  test-logproxy.cpp  test-sm+tmtc.cpp  test-tmtc.cpp
(+2003 files in other folders)
